Closed
Bug 682460
Opened 14 years ago
Closed 14 years ago
Leak when forcing layout during mutation event for table attribute
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla9
People
(Reporter: jruderman, Assigned: Ms2ger)
References
Details
(Keywords: assertion, memory-leak, regression)
Attachments
(3 files, 1 obsolete file)
###!!! ASSERTION: potential leak, plus waste of work: 'mTableInheritedAttributes == TABLE_ATTRS_DIRTY', file content/html/content/src/nsHTMLTableElement.cpp, line 1228
+ trace-refcnt reports a leaked "nsMappedAttributes" object
| Reporter | ||
Comment 1•14 years ago
|
||
Comment 2•14 years ago
|
||
Using nsHTMLTableElement::SetAttr is just buggy
Comment 4•14 years ago
|
||
Yes, bug 211636 should have used Before/AfterSetAttr, not override SetAttr.
| Reporter | ||
Updated•14 years ago
|
Comment 5•14 years ago
|
||
Olli, are you fixing this? Or is Bernd?
Requesting tracking for the leak regression.
tracking-firefox9:
--- → ?
I don't feel comfortable with this, see https://bugzilla.mozilla.org/show_bug.cgi?id=211636#c9
>I am insecure about the changes in SetAttr and UnsetAttr
| Assignee | ||
Comment 7•14 years ago
|
||
Something like this? (Untested)
Attachment #556252 -
Flags: review?(Olli.Pettay)
Updated•14 years ago
|
Attachment #556252 -
Flags: review?(Olli.Pettay) → review+
Comment 8•14 years ago
|
||
Try run for edb5c7975703 is complete.
Detailed breakdown of the results available here:
http://tbpl.allizom.org/?tree=Try&usebuildbot=1&rev=edb5c7975703
Results (out of 229 total builds):
success: 212
warnings: 15
failure: 2
Builds available at http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/Ms2ger@gmail.com-edb5c7975703
| Assignee | ||
Comment 9•14 years ago
|
||
As suggested by Bernd, fixed bug 211636 comment 16 as well. Ed, if you don't mind? (Passed try: <http://tbpl.allizom.org/?tree=Try&usebuildbot=1&rev=edb5c7975703>)
Assignee: nobody → Ms2ger
Attachment #556252 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #556383 -
Flags: checkin?(bmo)
Comment 10•14 years ago
|
||
OS: Mac OS X → All
Hardware: x86_64 → All
Target Milestone: --- → mozilla9
Updated•14 years ago
|
Attachment #556383 -
Flags: checkin?(bmo) → checkin+
Comment 11•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
tracking-firefox9:
? → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•