Bug 682460 - Fix leak when forcing layout during mutation event for table attribute; r=smaug